--- a/lab04-app/manifest.yml
+++ b/lab04-app/manifest.yml
@@ -1,6 +1,8 @@
 ---
 applications:
 - name: cglab
-  random-route: true
   memory: 64m
+  disk-quota: 128m
+  random-route: true
+  path: .
   # buildpack: ruby_buildpack
